--- a/public/templates/contactsDisplay.html
+++ b/public/templates/contactsDisplay.html
@@ -6,7 +6,7 @@
             <th>Email</th>
             <th>Number</th>
             <th>Action</th>
-            <th><a href="#" ng-click="logout()"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> LogOut</a></th>
+            <th><a href="" ng-click="logout()"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> LogOut</a></th>
         </tr>
         </thead>
         <tbody>
