--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -6,14 +6,14 @@
 
     <form name="registerForm">
         <div class="modal-body">
-            <label>Email</label><input type="email" class="form-control" name='uEmail' ng-model="user.email" required>
+            <label>Email</label><input type="email" class="form-control" name='uEmail' ng-model="newUser.email" required>
             <div ng-show="registerForm.uEmail.$dirty && registerForm.uEmail.$invalid" class="label label-danger">
                 Invalid:
                 <span ng-show="registerForm.uEmail.$error.required">Please input your Email!</span>
                 <span ng-show="registerForm.uEmail.$error.email">This is not a valid Email.</span>
             </div>
             <div>
-                <label>Password</label><input type="password" class="form-control" ng-model="user.password" required>
+                <label>Password</label><input type="password" class="form-control" ng-model="newUser.password" required>
             </div>
 
             <!--<div>-->
@@ -35,8 +35,8 @@
         </div>
 
         <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="createUser(user)" ng-disabled="registerForm.$invalid">Create my account</button>
-            <button class="btn btn-warning" type="button" ng-click="reset(user)">Reset</button>
+            <button class="btn btn-primary" type="button" ng-click="createUser(newUser)" ng-disabled="registerForm.$invalid">Create my account</button>
+            <button class="btn btn-warning" type="button" ng-click="reset(newUser)">Reset</button>
         </div>
 
     </form>
