--- a/public/templates/contactsDisplay.html
+++ b/public/templates/contactsDisplay.html
@@ -5,13 +5,13 @@
                 <tr>
                     <th>
                         Name
-                        <span ng-click="order = 'name" class="glyphicon glyphicon-menu-up"></span>
-                        <span ng-click="order = '-name" class="glyphicon glyphicon-menu-down"></span>
+                        <span ng-click="order = 'name' " class="glyphicon glyphicon-menu-up"></span>
+                        <span ng-click="order = '-name' " class="glyphicon glyphicon-menu-down"></span>
                     </th>
                     <th>
                         Email
-                        <span ng-click="order = 'email" class="glyphicon glyphicon-menu-up"></span>
-                        <span ng-click="order = '-email" class="glyphicon glyphicon-menu-down"></span>
+                        <span ng-click="order = 'email' " class="glyphicon glyphicon-menu-up"></span>
+                        <span ng-click="order = '-email' " class="glyphicon glyphicon-menu-down"></span>
                     </th>
                     <th>Number</th>
                     <th>Action</th>
